crates/apollo-compiler/test_data/diagnostics/0068_subselection_of_union.txt
Error: interface, union and object types must have a subselection set
    ╭─[0068_subselection_of_union.graphql:2:3]
    │
  2 │   pet1
    │   ──┬─  
    │     ╰─── field `pet1` type `CatOrDog` is an union and must select fields
    │ 
 21 │ union CatOrDog = Cat | Dog
    │ ─────────────┬────────────  
    │              ╰────────────── `CatOrDog` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0068_subselection_of_union.graphql:3:3]
    │
  3 │   pet2
    │   ──┬─  
    │     ╰─── field `pet2` type `CatOrDog` is an union and must select fields
    │ 
 21 │ union CatOrDog = Cat | Dog
    │ ─────────────┬────────────  
    │              ╰────────────── `CatOrDog` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0068_subselection_of_union.graphql:4:3]
    │
  4 │   pet3
    │   ──┬─  
    │     ╰─── field `pet3` type `CatOrDog` is an union and must select fields
    │ 
 21 │ union CatOrDog = Cat | Dog
    │ ─────────────┬────────────  
    │              ╰────────────── `CatOrDog` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0068_subselection_of_union.graphql:5:3]
    │
  5 │   pet4
    │   ──┬─  
    │     ╰─── field `pet4` type `CatOrDog` is an union and must select fields
    │ 
 21 │ union CatOrDog = Cat | Dog
    │ ─────────────┬────────────  
    │              ╰────────────── `CatOrDog` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0068_subselection_of_union.graphql:6:3]
    │
  6 │   pet5
    │   ──┬─  
    │     ╰─── field `pet5` type `CatOrDog` is an union and must select fields
    │ 
 21 │ union CatOrDog = Cat | Dog
    │ ─────────────┬────────────  
    │              ╰────────────── `CatOrDog` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0068_subselection_of_union.graphql:7:3]
    │
  7 │   pet6
    │   ──┬─  
    │     ╰─── field `pet6` type `CatOrDog` is an union and must select fields
    │ 
 21 │ union CatOrDog = Cat | Dog
    │ ─────────────┬────────────  
    │              ╰────────────── `CatOrDog` declared here
────╯

